--- a/currentStudy.html
+++ b/currentStudy.html
@@ -19,7 +19,7 @@
 <script>
 var mapContainer = document.getElementById('map'), // 지도를 표시할 div  
     mapOption = { 
-        center: new kakao.maps.LatLng(37.8, 127.6), // 지도의 중심좌표
+        center: new kakao.maps.LatLng(37.32191219571723, 127.12659496708484), // 지도의 중심좌표
         level: 3 // 지도의 확대 레벨
     };
 
